--- a/IntegradorBD/.env
+++ b/IntegradorBD/.env
@@ -3,3 +3,4 @@ MONGO_URL=mongodb://localhost:27017
 MONGO_USER=Tuki-Root
 MONGO_PASS=123
 MONGO_DB_NAME=Tuki-FoodStore
+JWT_SECRET=Mi_taladro_es_el_taladro_que_atravesara_el_cielo
