--- a/IntegradorBD/docker-compose.yml
+++ b/IntegradorBD/docker-compose.yml
@@ -1,14 +1,28 @@
+# version: '3.8'
+# services:
+#     mongodb:
+#         image: mongo:latest
+#         container_name: Tuki-FoodStore
+#         restart: always
+#         ports:
+#         - "27017:27017"
+#         volumes:
+#         - ./mongo-data:/data/db
+#         environment:
+#             MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+#             MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
+
 version: '3.8'
 services:
-    mongodb:
-        image: mongo:latest
-        container_name: Tuki-FoodStore
-        restart: always
-        ports:
-        - "27017:27017"
-        volumes:
-        - ./mongo-data:/data/db
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-            MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
-
+  mongodb:
+    image: mongo:latest
+    container_name: Tuki-FoodStore
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./mongo-data:/data/db
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: Tuki-Root
+      MONGO_INITDB_ROOT_PASSWORD: 123
